# perfectioncoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  Makefile.test.include  READ.ME  README.md  autogen.sh  ax_boost_base.m4  ax_boost_program_options.m4  ax_boost_thread.m4  ax_boost_unit_test_framework.m4  ax_check_link_flag.m4  ax_check_preproc_flag.m4  ax_cxx_compile_stdcxx.m4  ax_gcc_func_attribute.m4  ax_pthread.m4  configure.ac  evanreambranch  l_atomic.m4  libbitcoinconsensus.pc.in  perfection-qt.protocol  perfection.bash-completion  perfectioncoin-qt.desktop  perfectioncoin-qt.fininstall  perfectioncoin-qt.install  perfectioncoin-qt.manpages  perfectioncoin.examples  perfectioncoin.manpages  perfectioncoin_qt.m4  perfectioncoin_subdir_to_include.m4  perfectioncoind.install2  rules  walletcoinselection
.tx/: config
build-aux/: ax_boost_chrono.m4  ax_boost_filesystem.m4  ax_boost_system.m4  ax_check_compile_flag.m4  perfectioncoin_find_bdb48.m4  perfectioncoin_qt.m4
contrib/: gitian-build.sh  install_db4.sh  perfectioncoin-cli.bash-completion  perfectioncoin-qt.pro  perfectioncoin-tx.bash-completion  perfectioncoind.bash-completion  valgrind.supp
contrib/debian/: control  lintian-overides2  perfectioncoin-qt.bash-completion  perfectioncoin.manpages3  watch
contrib/devtools/: check-doc.py  check-rpc-mapping.py  clang-format-diff.py  commit-script-check.sh  copyright_header.py  gen-manpages.sh  git-subtree-check.sh  github-merge.py  lint-all.sh  lint-include-guards.sh  lint-includes.sh  lint-logs.sh  lint-python.sh  lint-shell.sh  lint-tests.sh  lint-whitespace.sh  optimize-pngs.py  security-check.py  symbol-check.py  test-security-check.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  org.bitcoin.bitcoind.plist  perfectioncoin.conf  perfectioncoin.init  perfectioncoin.openrcconf  perfectioncoind.openrc  perfectioncoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: LICENSE  README.md  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  extract-osx-sdk.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: README.md  perfectioncoin-0.12.0-libressl.patch  perfectioncoin.fc  perfectioncoin.if  perfectioncoin.spec  perfectioncoin.te
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_test.txt
contrib/testgen/: README.md  base58.py  gen_base56_test_vectors.py
contrib/verify-commits/: README.md  gpg.sh  pre-push-hook.sh  verify-commits.sh
contrib/verifybinaries/: README.md  verify.sh
contrib/windeploy/: detached-sig-create.sh
contrib/zmq/: zmq_sub.py  zmq_sub3.4.py
depends/: Makefile  config.guess  config.sub
depends/patches/qt/: qfixed-coretext.patch
depends/patches/zeromq/: 0001-fix-build-with-older-mingw64.patch  0002-disable-pthread_set_name_np.patch
doc/: Doxyfile.in  README.md  README_osx.md
doc/man/: Makefile.am  perfectioncoin-cli.1  perfectioncoin-qt.1  perfectioncoin-tx.1  perfectioncoind.1
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.2.md  release-notes-recent.
share/: genbuild.sh  setup.nsi.in
share/qt/: extract_strings_qt.py  info.plist.in
share/rpcauth/: rpcauth.py
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  walletcoinselector2
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_perfectioncoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  prevector.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.hh  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
